--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,8 +1,15 @@
 .container {
-    width: 1200px;
-    margin-left: 215px;
-    margin-right: 215px;
+    width: 480px;
+
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
+    padding: 0 15px;
+
+    @include tablet {
+        min-width: 768px;
+    }
+
+    @include desktop {
+        min-width: 1200px;
+    }
 }
