--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,15 +1,16 @@
 .container {
     width: 480px;
+    width: 100%;
 
     justify-content: center;
     margin: 0 auto;
     padding: 0 15px;
 
     @include tablet {
-        min-width: 768px;
+        max-width: 768px;
     }
 
     @include desktop {
-        min-width: 1200px;
+        max-width: 1200px;
     }
 }
