--- a/sass/components/_highlights.scss
+++ b/sass/components/_highlights.scss
@@ -1,4 +1,5 @@
 .highlights {
+    display: none;
     display: flex;
     flex-wrap: nowrap;
     list-style: none;
@@ -13,6 +14,7 @@
     }
 
     &__icon {
+        display: none;
         background-color: #f5f4fa;
         height: 120px;
         border-radius: 4px;
@@ -25,5 +27,6 @@
         font-size: 14px;
         line-height: 1.71;
         margin: 0;
+        display: none;
     }
 }
