--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,3 +20,4 @@
 @import "./components/modal";
 @import "./components/mainmenu";
 @import "./components/offers";
+@import "./components/mobile-menu";
