--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -1,4 +1,5 @@
 .banner {
+    display: none;
     background-image: linear-gradient(
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
