--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,4 +1,5 @@
 .customers {
+    display: none;
     display: flex;
     flex-wrap: nowrap;
 
@@ -7,6 +8,7 @@
     margin: 0 auto;
 
     &__icon {
+        display: none;
         fill: #afb1b8;
         width: 169px;
         height: 92px;
