--- a/sass/components/_headings.scss
+++ b/sass/components/_headings.scss
@@ -14,6 +14,7 @@ h1 {
 }
 
 h2 {
+    display: none;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.17;
@@ -22,6 +23,7 @@ h2 {
 }
 
 h3 {
+    display: none;
     font-size: 14px;
 
     font-weight: 700;
