--- a/sass/components/_mainmenu.scss
+++ b/sass/components/_mainmenu.scss
@@ -1,4 +1,5 @@
 .filter {
+    display: none;
     line-height: 1.63;
     display: flex;
     justify-content: center;
@@ -18,6 +19,8 @@
 }
 
 button {
+    display: none;
+
     display: flex;
     font-weight: 500;
 
