--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,16 +1,8 @@
 .container {
-    width: 480px;
-    width: 100%;
-
+    width: 1200px;
+    margin-left: 215px;
+    margin-right: 215px;
     justify-content: center;
-    margin: 0 auto;
-    padding: 0 15px;
-
-    @include tablet {
-        max-width: 768px;
-    }
-
-    @include desktop {
-        max-width: 1200px;
-    }
+    margin-left: auto;
+    margin-right: auto;
 }
