--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,15 +2,6 @@
     border-bottom: solid;
 
     border-color: #ececec;
-    padding: 10px 0;
-
-    @include tablet {
-        padding: 21px 0;
-    }
-
-    @include desktop {
-        padding: 24px 0 25px;
-    }
     margin: 0 auto;
 
     &__wrapper {
@@ -23,37 +14,36 @@
         color: #fff;
     }
 
-    &__nav {
-        display: none;
-
-        @include tablet {
-            display: flex;
-            margin-left: 83px;
-            margin-right: auto;
-        }
-        @include desktop {
-            margin-left: 93px;
-        }
-    }
     &__menu {
         display: none;
+        display: flex;
+        padding: 0;
+        margin: 0;
+        list-style: none;
 
-        @include tablet {
-            display: flex;
-            margin-left: 83px;
-        }
-        @include desktop {
-            margin-left: 93px;
+        @media (max-width: 767px) {
+            .menu {
+                display: none;
+            }
         }
     }
 
-    &__hamburger {
-        background: transparent;
-        border: none;
+    &__menu .link {
+        padding: 10px;
+        color: inherit;
+        text-decoration: none;
+    }
 
-        @include tablet {
-            display: none;
-        }
+    &__menu .link:hover,
+    &__menu .link:focus {
+        text-decoration: underline;
+    }
+
+    &__menu {
+        display: flex;
+        width: 285px;
+        justify-content: space-between;
+        margin-right: 314px;
     }
 
     &__contact-svg {
@@ -63,17 +53,6 @@
         padding-right: 10px;
         gap: 0;
     }
-
-    &__phonemail {
-        display: none;
-
-        @include tablet {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-    }
-
     &__item {
         color: #212121;
         font-weight: 500;
