--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,3 +1,7 @@
+nav {
+    display: none;
+}
+
 .header {
     border-bottom: solid;
 
@@ -15,7 +19,6 @@
     }
 
     &__menu {
-        display: none;
         display: flex;
         padding: 0;
         margin: 0;
@@ -84,6 +87,10 @@
         font-weight: 500;
         text-align: center;
         line-height: 1.17;
+    }
+
+    &__mailing {
+        display: none;
     }
     &__contact {
         display: flex;
