--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,8 +1,14 @@
 .container {
-    width: 1200px;
-    margin-left: 215px;
-    margin-right: 215px;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 480px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+
+    @include tablet {
+        max-width: 768px;
+    }
+    @include desktop {
+        padding: 0;
+        max-width: 1200px;
+    }
 }
