--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,12 +1,30 @@
 nav {
     display: none;
+
+    @include tablet {
+        display: flex;
+        margin-left: 83px;
+        margin-right: auto;
+    }
+
+    @include desktop {
+        display: flex;
+        margin-left: 93px;
+    }
 }
 
 .header {
     border-bottom: solid;
 
     border-color: #ececec;
-    margin: 0 auto;
+
+    @include tablet {
+        padding: 21px 0;
+    }
+
+    @include desktop {
+        padding: 24px 0 25px;
+    }
 
     &__wrapper {
         display: flex;
@@ -24,11 +42,11 @@ nav {
         margin: 0;
         list-style: none;
 
-        @media (max-width: 767px) {
-            .menu {
-                display: none;
-            }
-        }
+        //@media (max-width: 767px) {
+        //  .menu {
+        //    display: none;
+        // }
+        // }
     }
 
     &__menu .link {
@@ -46,7 +64,7 @@ nav {
         display: flex;
         width: 285px;
         justify-content: space-between;
-        margin-right: 314px;
+        margin-right: 93px;
     }
 
     &__contact-svg {
@@ -80,23 +98,37 @@ nav {
             }
         }
     }
+
+    &__mailing {
+        display: none;
+
+        @include tablet {
+            display: flex;
+            flex-direction: column;
+            margin-right: 15px;
+            margin-left: auto;
+        }
+
+        @include desktop {
+            display: flex;
+            max-width: 161px;
+            justify-content: space-between;
+            align-items: center;
+
+            margin-right: 215px;
+        }
+    }
     &__contact-list {
-        display: flex;
-        justify-content: flex-end;
         gap: 30px;
         font-weight: 500;
         text-align: center;
         line-height: 1.17;
     }
 
-    &__mailing {
-        display: none;
-    }
     &__contact {
         display: flex;
-        justify-content: baseline;
+
         align-items: center;
-        width: 161px;
 
         color: #757575;
 
@@ -105,6 +137,6 @@ nav {
 
         letter-spacing: 0.02em;
         margin: 0 auto;
-        line-height: 1.17;
+        line-height: 1.7;
     }
 }
