--- a/sass/components/_headings.scss
+++ b/sass/components/_headings.scss
@@ -1,16 +1,24 @@
 h1 {
     font-family: "Roboto", sans-serif;
     color: #fff;
+
+    font-size: 26px;
+
     font-weight: 900;
-    font-size: 44px;
+
     line-height: 1.36;
     margin: 0 auto;
-    width: 696px;
+    max-width: 365px;
 
     text-align: center;
     padding-top: 200px;
     padding-bottom: 50px;
     letter-spacing: 0.06em;
+
+    @include desktop {
+        font-size: 44px;
+        max-width: 696px;
+    }
 }
 
 h2 {
@@ -42,5 +50,9 @@ h4 {
     font-weight: 700;
     line-height: 1.19;
     color: #2196f3;
-    margin-right: 97px;
+    margin-left: 15px;
+
+    @include desktop {
+        margin-left: 215px;
+    }
 }
