--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -3,15 +3,45 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
         ),
-        url(../images/back.jpg);
+        url(/goit-markup-hw-08/img/img0_x1_mobile.jpg);
 
     background-position: center;
     background-size: cover;
-    max-width: 1600px;
-    height: 600px;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    padding-bottom: 118px;
+
+    //height: 600px;
+    //justify-content: center;
+    //margin-left: 0 auto;
+    //margin-right: 0 auto;
+
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url(/../img/img0_x2_mobile.jpg);
+    }
+    @include tablet {
+        background-image: url(/goit-markup-hw-08/img/img0_x1_tablet.jpg);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+            background-image: url(/goit-markup-hw-08/img/img0_x2_tablet.jpg);
+        }
+    }
+
+    @include desktop {
+        padding-top: 200px;
+        padding-bottom: 200px;
+        max-width: 1600px;
+        // padding-right: 0;
+        //padding-left: 0;
+        background-image: url(/goit-markup-hw-08/img/img0_x1_desktop.jpg);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+            background-image: url(/goit-markup-hw-08/img/img0_x2_desktop.jpg);
+        }
+    }
+
     &__button {
         display: flex;
         align-items: center;
@@ -32,24 +62,5 @@
         &:focus {
             cursor: pointer;
         }
-    }
-}
-@media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .title-section {
-        background-image: url("../images/officepicture@2x.jpg");
-    }
-}
-@include tablet {
-    .title-section {
-        max-width: 768px;
-    }
-}
-@include desktop {
-    .title-section {
-        padding-top: 200px;
-        padding-bottom: 200px;
-        max-width: 1600px;
     }
 }
