--- a/sass/components/_headings.scss
+++ b/sass/components/_headings.scss
@@ -33,6 +33,15 @@ h3 {
     font-size: 14px;
 
     font-weight: 700;
+    text-align: center;
+
+    @include tablet {
+        text-align: left;
+    }
+
+    @include desktop {
+        text-align: left;
+    }
 }
 
 h4 {
@@ -41,6 +50,10 @@ h4 {
     font-weight: 700;
     color: #fff;
     text-transform: uppercase;
+
+    @include desktop {
+        text-align: start;
+    }
 }
 
 .logo {
@@ -52,7 +65,20 @@ h4 {
     color: #2196f3;
     margin-left: 15px;
 
+    &__bottom {
+        font-family: "Raleway", sans-serif;
+        text-decoration: none;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 1.19;
+        color: #2196f3;
+        margin-left: 0 auto;
+    }
+
     @include desktop {
         margin-left: 215px;
+        &__bottom {
+            margin-left: 0px;
+        }
     }
 }
