--- a/sass/components/_lists.scss
+++ b/sass/components/_lists.scss
@@ -3,9 +3,11 @@ li {
 }
 
 img {
-    width: 370px;
-    height: 294px;
+    // width: 370px;
+    //height: 294px;
     display: block;
+    width: 100%;
+    height: auto;
     padding: 0;
     margin: 0 auto;
 }
