--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,7 +2,7 @@
     max-width: 480px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0px;
 
     @include tablet {
         max-width: 768px;
