--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,4 @@
-footer {
-    display: none;
+.footer {
     background-color: #2f303a;
     padding-top: 60px;
     padding-bottom: 60px;
@@ -7,11 +6,14 @@ footer {
 
 .footer-container {
     display: flex;
-    gap: 70px;
+    flex-direction: column;
+    text-align: center;
+    // gap: 70px;
 
     &__address-bottom {
-        max-width: 231px;
-        line-height: 24px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
     }
 
     &__address {
@@ -24,6 +26,9 @@ footer {
     &__contact {
         display: flex;
 
+        flex-direction: column;
+        text-align: center;
+
         color: #757575;
 
         font-weight: 500;
@@ -33,6 +38,12 @@ footer {
 
         line-height: 24px;
     }
+
+    @include desktop {
+        display: flex;
+        flex-direction: row;
+        gap: 70px;
+    }
 }
 
 ul li .find-us {
@@ -40,20 +51,38 @@ ul li .find-us {
 }
 
 .newsletter {
-    max-width: 570px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+
+    justify-content: center;
+
     padding-right: 0;
     margin: 0 auto;
 
     &__subscription {
         display: flex;
-        justify-content: flex-start;
+        flex-direction: column;
+        flex-wrap: wrap;
+
+        justify-content: center;
+        align-items: center;
 
         gap: 10px;
         margin: 0 auto;
         padding: 0;
+
+        @include desktop {
+            display: flex;
+            flex-direction: row;
+        }
     }
 
     &__mail-box {
+        display: flex;
+        flex-direction: column;
+
         height: 50px;
         border-radius: 4px;
         border: 1px solid rgba(255, 255, 255, 0.3);
@@ -64,8 +93,9 @@ ul li .find-us {
     }
 
     &__button-send {
+        padding-top: 15px;
         display: flex;
-        align-items: center;
+
         gap: 30px;
         background-color: #2196f3;
         color: #fff;
@@ -74,6 +104,8 @@ ul li .find-us {
     }
 
     &__mail-send-svg {
+        display: flex;
+
         fill: #fff;
     }
 }
