--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,27 +1,27 @@
 .team-section {
-    display: none;
     background-color: #f5f4fa;
 }
 
 .people {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 30px;
-    margin: 0 auto;
-    padding: 0px;
+
+    //margin: 0 auto;
+    padding: 0;
+    //justify-content: space-between;
 
     &__person-space {
         background-color: #fff;
-        width: 270px;
-        height: 428px;
+
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
 
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        padding-bottom: 24px;
     }
-    &__person-pic {
-        width: 270px;
-        height: 260px;
-    }
+
     &__name {
         display: flex;
         letter-spacing: 0.03em;
@@ -39,5 +39,18 @@
         line-height: 1.17;
         padding-top: 10px;
         padding-bottom: 16px;
+    }
+
+    @include tablet {
+        flex-direction: row;
+        flex-wrap: wrap;
+        &__person-space {
+            max-width: 354px;
+        }
+    }
+
+    @include desktop {
+        flex-wrap: nowrap;
+        flex-direction: row;
     }
 }
