--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,6 +14,10 @@
         display: flex;
         flex-direction: column;
         text-align: center;
+
+        @include desktop {
+            text-align: left;
+        }
     }
 
     &__address {
@@ -37,11 +41,16 @@
         letter-spacing: 0.02em;
 
         line-height: 24px;
+
+        @include desktop {
+            text-align: left;
+        }
     }
 
     @include desktop {
         display: flex;
         flex-direction: row;
+
         gap: 70px;
     }
 }
