--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -120,6 +120,11 @@ nav {
         font-weight: 500;
         text-align: center;
         line-height: 1.17;
+
+        @include desktop {
+            display: flex;
+            flex-direction: row;
+        }
     }
 
     &__contact {
