--- a/sass/components/_mainmenu.scss
+++ b/sass/components/_mainmenu.scss
@@ -1,10 +1,13 @@
 .filter {
     line-height: 1.63;
     display: flex;
-    justify-content: center;
+    //justify-content: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
 
     margin: 0 auto;
-    width: 611px;
+    max-width: 362px;
+
     gap: 8px;
 
     margin-bottom: 34px;
@@ -14,6 +17,20 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.39, 1.03, 0.82, 0.08);
+    }
+
+    @include tablet {
+        display: flex;
+        justify-content: center;
+        flex-wrap: nowrap;
+        max-width: 611px;
+    }
+
+    @include desktop {
+        display: flex;
+        justify-content: center;
+        flex-wrap: nowrap;
+        max-width: 611px;
     }
 }
 
