photo mobile fix

--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -17,7 +17,7 @@
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-        background-image: url(/../img/img0_x2_mobile.jpg);
+        background-image: url(/goit-markup-hw-08/img/img0_x2_mobile.jpg);
     }
     @include tablet {
         background-image: url(/goit-markup-hw-08/img/img0_x1_tablet.jpg);
