--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,6 @@
 .team-section {
     background-color: #f5f4fa;
+    //justify-content: center;
 }
 
 .people {
@@ -10,7 +11,7 @@
 
     //margin: 0 auto;
     padding: 0;
-    //justify-content: space-between;
+    justify-content: center;
 
     &__person-space {
         background-color: #fff;
