--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -9,8 +9,9 @@
     gap: 30px;
     padding: 0;
 
-    justify-content: space-between;
+    justify-content: center;
     margin: 0 auto;
+    //align-items: center;
 
     &__icon {
         fill: #afb1b8;
