--- a/sass/components/_highlights.scss
+++ b/sass/components/_highlights.scss
@@ -1,16 +1,16 @@
 .highlights {
     display: flex;
 
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    //flex-direction: column;
+    //justify-content: center;
+    //flex-wrap: wrap;
+    //align-items: center;
+    flex-direction: column;
 
     //flex-wrap: nowrap;
     //list-style: none;
-    padding: 0;
+    //padding: 0;
     //max-width: 450px;
-    margin: 0;
+    //margin: 0 auto;
 
     gap: 30px;
 
@@ -21,36 +21,46 @@
 
     &__item {
         display: block;
+        align-items: center;
         font-weight: 700;
         font-size: 14px;
         line-height: 1.17;
-        max-width: 450px;
+        //max-width: 450px;
+        margin: auto;
 
         //flex-basis: calc((1200px - 90px) / 4);
     }
 
     &__icon {
+        display: flex;
         background-color: #f5f4fa;
         height: 120px;
         border-radius: 4px;
         padding-top: 25px;
-        margin: auto;
-        max-width: 450px;
-        margin: 0;
+        //margin: 0 auto;
+        //max-width: 450px;
     }
 
     &__desc {
+        //display: flex;
+        //justify-content: center;
+
         color: #757575;
         font-weight: 400;
         font-size: 14px;
         line-height: 1.71;
-        margin: 0;
-        max-width: 450px;
+        //margin: 0 auto;
+        //max-width: 450px;
     }
 
     @include tablet {
-        display: flex;
-        //flex-direction: row;
+        //display: flex;
+
+        flex-direction: column;
+        flex-wrap: wrap;
+
+        //flex-basis: calc((100% - 30px) / 2);
+        gap: 30px;
 
         &__item {
             max-width: 354px;
@@ -59,31 +69,31 @@
         &__icon {
             max-width: 354px;
             //flex-basis: calc((738px - 30px) / 2);
-            gap: 30px;
         }
 
         &__desc {
             max-width: 354px;
         }
-
-        //&__desc {
-        //  max-width: 354px;
-        //}
     }
     @include desktop {
-        padding: 0 auto;
+        display: flex;
+        padding: 0;
+
         flex-direction: row;
         flex-wrap: nowrap;
+
+        //flex-basis: calc((100% - 90px) / 4);
+        //align-items: center;
+        gap: 30px;
 
         &__item {
             max-width: 270px;
         }
-        //flex-basis: calc((1200px - 90px) / 4);
 
         &__icon {
             max-width: 270px;
             // flex-basis: calc((1200px - 90px) / 4);
-            gap: 30px;
+            // gap: 30px;
         }
 
         &__desc {
