--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -121,7 +121,7 @@
         }
     }
     &__email {
-        @extend .contact-mobil__telephone !optional;
+        @extend .contact-mobile__telephone;
         font-size: 24px;
         margin-bottom: 64px;
         color: #757575;
