--- a/sass/components/_highlights.scss
+++ b/sass/components/_highlights.scss
@@ -6,7 +6,6 @@
     //align-items: center;
     flex-direction: column;
 
-    //flex-wrap: nowrap;
     //list-style: none;
     //padding: 0;
     //max-width: 450px;
@@ -21,11 +20,11 @@
 
     &__item {
         display: block;
-        align-items: center;
+        // align-items: center;
         font-weight: 700;
         font-size: 14px;
         line-height: 1.17;
-        //max-width: 450px;
+        max-width: 450px;
         margin: auto;
 
         //flex-basis: calc((1200px - 90px) / 4);
@@ -50,17 +49,21 @@
         font-size: 14px;
         line-height: 1.71;
         //margin: 0 auto;
-        //max-width: 450px;
+        max-width: 450px;
     }
 
     @include tablet {
-        //display: flex;
+        display: flex;
 
-        flex-direction: column;
+        flex-direction: row;
+
+        //align-content: flex-start;
         flex-wrap: wrap;
+        padding: 0;
+        //margin: auto;
 
         //flex-basis: calc((100% - 30px) / 2);
-        gap: 30px;
+        //gap: 30px;
 
         &__item {
             max-width: 354px;
@@ -77,14 +80,16 @@
     }
     @include desktop {
         display: flex;
-        padding: 0;
 
         flex-direction: row;
+        justify-content: space-between;
+        padding: 0;
+
         flex-wrap: nowrap;
 
         //flex-basis: calc((100% - 90px) / 4);
-        //align-items: center;
-        gap: 30px;
+        align-items: center;
+        //gap: 30px;
 
         &__item {
             max-width: 270px;
@@ -93,7 +98,7 @@
         &__icon {
             max-width: 270px;
             // flex-basis: calc((1200px - 90px) / 4);
-            // gap: 30px;
+            gap: 30px;
         }
 
         &__desc {
