--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -47,6 +47,13 @@
         }
     }
 
+    @include tablet {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
     @include desktop {
         display: flex;
         flex-direction: row;
