--- a/sass/components/_highlights.scss
+++ b/sass/components/_highlights.scss
@@ -88,7 +88,7 @@
         flex-wrap: nowrap;
 
         //flex-basis: calc((100% - 90px) / 4);
-        align-items: center;
+        //align-items: center;
         //gap: 30px;
 
         &__item {
