--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -99,8 +99,10 @@ nav {
         @include tablet {
             display: flex;
             flex-direction: column;
-            margin-right: 15px;
+
+            //margin-right: 15px;
             margin-left: auto;
+            margin-right: auto;
         }
 
         @include desktop {
@@ -112,7 +114,7 @@ nav {
             justify-content: space-between;
             align-items: center;
 
-            margin-right: 215px;
+            margin-right: auto;
         }
     }
     &__contact-list {
