--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -79,6 +79,7 @@
 .mobile-menu .link {
     display: block;
     padding: 10px;
+
     color: #fff;
     text-decoration: none;
 }
@@ -130,12 +131,26 @@
 
 .socialmedia-mobile {
     display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+    //padding-left: 10px;
+    //padding-right: 10px;
+    max-width: 356px;
+
     padding-top: 64px;
     padding-bottom: 48px;
 
     &__item {
+        display: flex;
+
         padding-left: 10px;
         padding-right: 10px;
+        max-width: 200px;
+        margin: 0;
+
         border-right: 1px solid rgba(33, 33, 33, 0.2);
         &--notborder {
             border: 0;
@@ -144,10 +159,14 @@
     &__link {
         color: #2196f3;
         font-weight: 500;
-        font-size: 18px;
-        letter-spacing: 0.02em;
+        //font-size: 1.8rem;
+        letter-spacing: 0.36px;
         line-height: 1.2;
         transition: $transition;
+
+        //@media (max-width: 420px) {
+        //  font-size: 1.3rem;
+        //}
         &:hover,
         &:focus {
             color: getColor("accent");
