--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -23,29 +23,38 @@
 }
 
 .modal {
+    display: flex;
+
+    max-width: 450px;
+    padding-left: 10px;
+    align-items: center;
+    justify-content: center;
+
     position: relative;
     margin: auto;
+    padding-bottom: 10px;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
-    width: 528px;
-    height: 581px;
+    max-width: 528px;
+    max-height: 581px;
     cursor: auto;
     border-radius: 4px;
 
     &__modal-close {
+        position: absolute;
         width: 30px;
         height: 30px;
         border-radius: 50%;
         font-size: 11px;
-        padding-top: 8px;
+        //padding-top: 8px;
         padding-left: 8px;
         padding-right: 8px;
         background-color: #fff;
-        position: relative;
+
         top: 8px;
 
-        left: 93%;
+        left: 92%;
         border: 1px solid rgba(0, 0, 0, 0.1);
         cursor: pointer;
 
@@ -61,8 +70,10 @@
     }
 
     &__contact-header {
+        display: flex;
         position: absolute;
         text-align: center;
+        max-width: 370px;
         color: #212121;
         font-size: 20px;
         letter-spacing: 0.03em;
@@ -77,6 +88,7 @@
 
     &__form-style {
         display: flex;
+
         flex-direction: column;
 
         font-size: 12px;
@@ -97,13 +109,17 @@
         display: flex;
 
         position: relative;
-        width: 448px;
+        max-width: 370px;
+        //padding-top: 10px;
+        //padding-right: 10px;
+        align-content: center;
+        //width: 448px;
         height: 40px;
         border: 1px #212121 solid;
         border-radius: 4px;
         align-items: center;
         padding-left: 12px;
-        margin-top: 5px;
+        //margin-top: 5px;
         margin-bottom: 10px;
 
         &:hover,
@@ -118,8 +134,15 @@
     }
 
     &__text-field {
-        width: 415px;
-        padding-left: 20px;
+        display: flex;
+
+        position: relative;
+
+        padding-top: 10px;
+        max-width: 370px;
+        //padding-right: 10px;
+        align-content: center;
+
         height: 38px;
         border: #fff;
         outline: none;
@@ -139,12 +162,14 @@
         display: flex;
 
         position: relative;
-        width: 448px;
+        max-width: 370px;
+        //padding-right: 10px;
+        align-content: center;
         height: 120px;
         border: 1px #212121 solid;
         border-radius: 4px;
         align-items: center;
-        padding-left: 12px;
+        //padding-left: 12px;
 
         &:hover,
         &:focus {
@@ -159,7 +184,7 @@
 
     &__text-window {
         padding-top: 10px;
-        width: 448px;
+        max-width: 370px;
         padding-right: 0;
         height: 116px;
         border: #fff;
@@ -250,6 +275,26 @@
         &:focus {
             background-color: #f5f4fa;
             color: #212121;
+        }
+    }
+
+    @include tablet {
+        position: relative;
+        min-width: 450px;
+        padding-left: 40px;
+        padding-right: 40px;
+        &__label-acceptance {
+            font-size: 12px;
+        }
+    }
+    @include desktop {
+        position: relative;
+        min-width: 528px;
+        min-height: 581px;
+        padding-left: 40px;
+        padding-right: 40px;
+        &__label-acceptance {
+            font-size: 14px;
         }
     }
 }
