--- a/sass/components/_highlights.scss
+++ b/sass/components/_highlights.scss
@@ -1,16 +1,14 @@
 .highlights {
     display: flex;
 
-    //flex-wrap: wrap;
+    flex-wrap: wrap;
 
-    flex-direction: column;
+    //flex-direction: column;
 
     //list-style: none;
     //padding-left: 15px;
     //padding-right: 15px;
-    //justify-content: center;
-    //max-width: 450px;
-    //margin: auto;
+    justify-content: center;
 
     gap: 30px;
 
@@ -21,6 +19,7 @@
 
     &__item {
         display: block;
+
         //align-items: center;
         font-weight: 700;
         font-size: 14px;
@@ -32,12 +31,17 @@
 
     &__back {
         display: flex;
+        align-items: center;
+        //justify-content: center;
         color: #f5f4fa;
         max-width: 450px;
     }
 
     &__icon {
         display: flex;
+        align-items: center;
+        //justify-content: center;
+
         background-color: #f5f4fa;
         height: 120px;
         border-radius: 4px;
@@ -48,15 +52,17 @@
 
     &__desc {
         display: flex;
-        //justify-content: center;
+        align-items: center;
+        justify-content: center;
+        //text-align: flex-start;
 
         color: #757575;
         font-weight: 400;
         font-size: 14px;
         line-height: 1.71;
-        //margin: 0 auto;
-        //padding: auto;
-        //max-width: 450px;
+        //margin: 0;
+        //padding: 0;
+        max-width: 450px;
     }
 
     @include tablet {
