--- a/sass/components/_highlights.scss
+++ b/sass/components/_highlights.scss
@@ -7,7 +7,7 @@
 
     //list-style: none;
     //padding-left: 15px;
-    //padding-right: 15px;
+    padding: 0;
     justify-content: center;
 
     gap: 30px;
@@ -32,8 +32,9 @@
     &__back {
         display: flex;
         align-items: center;
+
         //justify-content: center;
-        color: #f5f4fa;
+        //color: red;
         max-width: 450px;
     }
 
@@ -47,13 +48,15 @@
         border-radius: 4px;
 
         padding-top: 25px;
-        //margin: 0;
+        flex-basis: calc((450px - 20px) / 1);
+        gap: 10px;
     }
 
     &__desc {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        padding-left: 10px;
+        //align-items: center;
+        //justify-content: center;
         //text-align: flex-start;
 
         color: #757575;
