--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -56,9 +56,9 @@ nav {
 
     &__menu {
         display: flex;
-        width: 285px;
+        width: 283px;
         justify-content: space-between;
-        margin-right: 93px;
+        //margin-right: 93px;
     }
 
     &__contact-svg {
@@ -103,6 +103,7 @@ nav {
             //margin-right: 15px;
             margin-left: auto;
             margin-right: auto;
+            align-items: center;
         }
 
         @include desktop {
@@ -114,7 +115,7 @@ nav {
             justify-content: space-between;
             align-items: center;
 
-            margin-right: auto;
+            margin-right: auo;
         }
     }
     &__contact-list {
